# faac

./: .gitignore  ChangeLog  README.md  RESEARCH.md  ROADMAP.md  TODO  apply_all_optimizations.py  baseline.txt  baseline_final.json  baseline_full.json  baseline_full_results  baseline_music_50_results  baselines.md5  bench.py  benchmark.py  benchmark_compare.py  benchmark_faac.py  benchmark_faac_robust.py  benchmark_quality.py  benchmark_quantize.py  candidate.json  candidate_final_v5.json  candidate_final_v6.json  candidate_final_v7.json  crash_test.py  current  current.json  current_baseline  debug_print.py  double_base.json  double_opt.json  final.json  final_cand_music_50_results  final_check_results  final_full.json  final_results_50  final_submission_results  final_verify_v5.json  final_verify_v6.json  final_verify_v7.json  (+76 more)
.github/workflows/: benchmark.yml  benchmarks.yml  master.yml
benchmarks/: compare_results.py  generate_test_waves.py  generate_waves.py  run_benchmarks.py
docs/: QUALITY_IMPROVEMENTS.md  RESEARCH.md  mxu.md  mxu2.md
faac-benchmark/: phase2_mos.py
frontend/: input.c  main.c  maingui.c  meson.build
include/: faac.h  faaccfg.h  faaccfg.h.in  meson.build
install/lib/x86_64-linux-gnu/: libfaac.so.0.0.0  libfaac_drm.so.0.0.0
install/lib/x86_64-linux-gnu/pkgconfig/: faac.pc
install/share/man/man1/: faac.1
libfaac/: bitstream.c  bitstream.h  blockswitch.c  blockswitch.h  builtin_tables.c  builtin_tables.h  channels.c  channels.h  coder.h  cpu_compute.c  cpu_compute.h  faac_real.h  fft.c  fft.h  filtbank.c  filtbank.h  frame.c  frame.h  huff2.c  huff2.h  libfaac.def  linkage.h  meson.build  mxu2_asm.h  mxu_macros.h  pseudo_sbr.c  pseudo_sbr.h  psymodel_mdct.c  quant_tables.h  quantdata.h  quantize.c  quantize.h  quantize_avx.c  quantize_avx2.c  quantize_internal.h  quantize_mxu.c  quantize_mxu.h  quantize_neon.c  quantize_ref.c  quantize_sse.c  (+6 more)
libfaac/kiss_fft/: CHANGELOG  README  README.kiss_fft  TIPS  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  kiss_fftr.c
results/: Candidate_base.json  Candidate_cand.json  amd64_single_base.json  amd64_single_cand.json  baseline_final.json  baseline_mos.json  baseline_v2.json  baseline_v3.json  candidate.json  candidate_final.json  candidate_final_v7.json  candidate_v3_vss.json  candidate_v4.json  candidate_vss.json  final_opt.json  final_verify.json  iter1.json  iter10.json  iter1_final.json  iter1_no_clamp.json  iter1_quality.json  iter1_tune.json  iter2.json  iter2_final.json  iter3.json  iter3_rd.json  iter3_rd_final.json  iter4.json  iter4_final.json  iter4_rd.json  iter4_rd_v2.json  iter4_rd_v3.json  iter4_rd_v4.json  iter4_rd_v5.json  iter4_rd_v6.json  iter4_rd_v7.json  iter4_rd_v8.json  iter5.json  iter6.json  iter7.json  (+4 more)
results/comp_v3/: voip_cand.json
results/comparison/: cand_results_50.json  cand_results_50_v2.json  cand_results_50_v3.json  cand_results_50_v4.json  cand_results_50_v5.json  cand_results_50_v6.json  cand_results_50_v7.json  cand_results_50_v8.json  run_cand.json  vss_base.json
results/comparison_final_v2/: voip_cand.json
results/comparison_final_v3/: voip_base.json  voip_cand.json
results/comparison_final_v4/: voip_cand.json
results/comparison_final_v5/: voip_cand.json
results/comparison_final_v6/: voip_cand.json
results/comparison_final_v7/: voip_cand.json
results/comparison_final_v8/: voip_cand.json
results/comparison_v5/: voip_cand.json
results/comparison_v6/: voip_cand.json
results_comp_final/: amd64_single_base.json  amd64_single_cand.json
scripts/: gen_tables.py
tests/: Dockerfile.visqol  README.md  compare_results.py  config.py  fetch_sqam.py  generate_waves.py  measure_size.py  meson.build  phase1_encode.py  phase2_mos.py  requirements.txt  run.sh  run_benchmark.py  run_benchmarks.py  setup_datasets.py  test_api.c  test_bitstream.c  test_blockswitch.c  test_channels.c  test_encoder.py  test_fft.c  test_huffman.c  test_mdct.c  test_quantize.c  test_tns.c  test_util.c
tests/output/: final_report.json  final_test_matrix.json  final_tests.json  final_validation.json  v3_results.json  visqol_test.json
