option('frontend',
    description: 'Build the frontend',
    type: 'boolean',
    value: true)

option('drm',
    description: 'Build the DRM variant library',
    type: 'boolean',
    value: true)

option('floating-point',
    description: 'Floating point precision',
    type: 'combo',
    choices: ['single', 'double'],
    value: 'double')

option('sse2',
    description: 'Enable hand-rolled SSE2 optimizations',
    type: 'boolean',
    value: true)

option('avx2',
    description: 'Enable hand-rolled AVX2 optimizations',
    type: 'boolean',
    value: true)
