option('frontend',
    description: 'Build the frontend',
    type: 'boolean',
    value: true)

option('floating-point',
    description: 'Floating point precision',
    type: 'combo',
    choices: ['single', 'double'],
    value: 'double')

option('tests',
    description: 'Build unit tests',
    type: 'boolean',
    value: true)
